# fetpapiClient

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
cmake/: FetpapiClient.cs  FetpapiClient.csproj.template  FetpapiClient.sln.template  MyOwnClientCoreHandlers.cs  MyOwnDiscoveryProtocolHandlers.cs  MyOwnStoreProtocolHandlers.cs
cs/: CMakeLists.txt
cs/Properties/: AssemblyInfo.cs
docker/centos7.5.1804/: Dockerfile
java/withFesapi/com/f2i_consulting/fetpapi/client/: FetpapiClient.java  MyInitializationParameters.java
java/withFesapi/com/f2i_consulting/fetpapi/client/handlers/: MyOwnCoreHandlers.java  MyOwnDiscoveryProtocolHandlers.java  MyOwnStoreProtocolHandlers.java
java/withoutFesapi/com/f2i_consulting/fetpapi/client/: FetpapiClient.java  MyInitializationParameters.java
java/withoutFesapi/com/f2i_consulting/fetpapi/client/handlers/: MyOwnClientCoreHandlers.java  MyOwnDiscoveryProtocolHandlers.java  MyOwnStoreProtocolHandlers.java
python/src/etp/: my_own_client_core_handlers.py  my_own_discovery_protocol_handlers.py  my_own_store_protocol_handlers.py
src/withFesapi/: MyInitializationParameters.h  MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  main.cpp
src/withoutFesapi/: MyOwnCoreProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.cpp  main.cpp
